--- a/banci.html
+++ b/banci.html
@@ -65,7 +65,7 @@
                         <a data-toggle="dropdown" href="#" class="dropdown-toggle ylui-nav-right">
                             <img class="nav-user-photo" src="images/default_user.jpg" alt="头像" />
                             <span class="user-info">
-                                <small>admin,欢迎您回来</small>
+                                <small>admin,欢迎您回来1</small>
                                 <small id="localtime">2015-11-26 13：42 星期一</small>
                             </span>
                             <i class="icon-caret-down"></i>
